# fast_fundamentos_fluxo_alternado

./: .env  produto.db  pyproject.toml
migrations/: env.py
migrations/versions/: d5c3d8e0911b_first_migrate.py
sistema_estudos/: db.py  main.py
sistema_estudos/core/: database.py  settings.py
sistema_estudos/models/: __init__.py  produtos.py
sistema_estudos/routers/: produtos.py
sistema_estudos/schemas/: produtos.py
